--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -16,4 +16,8 @@ jobs:
         - name: Checkout
           uses: actions/checkout@v6
 
+        - name: Linux cmd
+          run: |
+            echo "Hello World"
+
     
